# jamal

./: .gitignore  Dockerfile  README.md  TASK_LIST.md  TEST_CHECKLIST.md  deploy.sh  docker-compose.yml  install.bat
implant/: Cargo.toml
implant-c/: Makefile  build.bat  build_donut.bat
implant-c/src/: config.h  crypto.c  crypto.h  dynapi.c  dynapi.h  evasion.c  evasion.h  files.c  files.h  http.c  http.h  main.c  process.c  process.h  protocol.c  protocol.h  shell.c  shell.h  sleep_obf.c  sleep_obf.h  utils.c  utils.h
implant/src/: client.rs  config.rs  main.rs  sysinfo.rs
implant/src/handlers/: files.rs  mod.rs  shell.rs
server/: package-lock.json  package.json
server-web/: Cargo.toml
server-web/src/: api.rs  auth.rs  db.rs  listener.rs  main.rs  state.rs
server-web/static/: app.js  index.html  style.css
server/src/: App.css  App.tsx
server/src-tauri/: Cargo.toml  tauri.conf.json
server/src-tauri/capabilities/: default.json
server/src-tauri/src/: lib.rs  listener.rs  main.rs  state.rs
server/src-tauri/src/commands/: builder_cmd.rs  client_cmd.rs  files_cmd.rs  listener_cmd.rs  mod.rs
shared/: Cargo.toml
shared/src/: crypto.rs  lib.rs  messages.rs
tools/: build_loader.bat  loader.c
