[package]
name = "implant"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
ureq = { version = "2.9", default-features = false, features = ["json", "native-tls", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whoami = "1.4"
hostname = "0.3"
base64 = "0.22"
rand = "0.8"
native-tls = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }
encoding_rs = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"     # 优化大小
lto = true          # 链接时优化
codegen-units = 1   # 单代码生成单元
panic = "abort"     # 不展开 panic
strip = true        # 剥离符号

[[bin]]
name = "implant"
path = "src/main.rs"
