[package]
name = "jamalc2-web"
version = "0.1.0"
edition = "2021"
description = "JamalC2 Web Server - Cross-platform C2 control panel"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (for IP geolocation)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
base64 = "0.22"
hex = "0.4"
dirs = "5"
rand = "0.8"
tokio-util = { version = "0.7", features = ["io"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Shared library
shared = { path = "../shared" }

[dev-dependencies]
tempfile = "3"
