[package]
name = "server"
version = "0.1.0"
description = "JamalC2 Control Server"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Local shared library
shared = { path = "../../shared" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = [] }
tower-http = { version = "0.5", features = ["cors"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
once_cell = "1.19"
futures-util = "0.3"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
rand = "0.8"


